# secrets_cli

./: Cargo.toml  bla  bla.js  try.py
.github/workflows/: ci.yaml
js_testing/: decryption.js
src/: decryption.rs  encryption.rs  encryption2.rs  file_utils.rs  http_lib.rs  main.rs
