[package]
name = "secrets_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.7"
aes-gcm = "0.9.4"
pbkdf2 = "0.10"
rand_core = { version = "0.6", features = ["std"] }
base64 = "0.13.0"
