[package]
name = "secrets_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = [ "json"] }
tokio = { version = "1", features = ["full"] }
aes-gcm = "0.9.4"
pbkdf2 = "0.11.0"
base64 = "0.13.0"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"