[package]
name = "secrets_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
# crypto
aes-gcm = "0.9.4"
pbkdf2 = "0.11.0"
base64 = "0.13.0"
rand = "0.8.4"
# requests
reqwest = { version = "0.11", features = [ "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# cli
clap = { version = "3.1.9", features = ["derive"] }
regex = "1.5.5"